[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paper_icps"
version = "0.1.0"
description = "Deep Learning-based Time Series Forecasting for Industrial Discrete Process Data"
authors = [
    { name = "Marc Toiflhart" },
    { name = "Manuel Bielak" },
    { name = "Olaf Sasnick" }
]
requires-python = ">=3.10"

dependencies = [
    "dash==3.2.0",
    "dash_bootstrap_components==2.0.4",
    "einops==0.8.1",
    "Flask==3.1.2",
    "matplotlib==3.10.7",

    # FIXED: numpy 2.3.4 is Python 3.11+ only → now compatible for Python 3.10
    "numpy>=1.26,<2.3",

    "optuna==4.5.0",
    "pandas==2.3.3",
    "ray[tune]==2.49.2",
    "reformer_pytorch==1.4.4",
    "scikit_learn==1.7.2",
    "scipy>=1.11,<1.16",
    "statsmodels==0.14.5",
    "sympy==1.14.0",
    "tensorboardx==2.6.4",

    # IMPORTANT: DO NOT pin Torch here!
    # Torch is installed manually with the correct CUDA version:
    # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118

    "tqdm==4.67.1",
    "bayesian-optimization>=1.4.3",
    "hyperopt"
]

[tool.setuptools.packages.find]
where = ["src"]